--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "type": "module",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
-    "discord-api-types": "^0.29.0",
-    "discord.js": "^13.6.0"
+    "discord-api-types": "^0.37.0",
+    "discord.js": "^13.6.0",
+    "express": "^4.18.1"
   },
   "name": "pavlov-bot-discord",
   "version": "1.0.0",
   "scripts": {
-    "run": "node index.js",
-    "register": "node register.cjs"
+    "run": "node src/index.js",
+    "register": "node src/register.cjs"
   },
   "repository": {
     "type": "git",
