--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
+    "axios": "^0.27.2",
     "discord-api-types": "^0.37.0",
     "discord.js": "^13.6.0",
     "express": "^4.18.1"
