--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -9,6 +9,7 @@ env:
   IMAGE_NAME: pavlov-bot-discord
   IMAGE_TAG: latest
   DOCKERFILE_PATH: Dockerfile
+  DOCKERHUB_USERNAME: gogglesh
 
 jobs:
   build_and_publish:
@@ -29,4 +30,4 @@ jobs:
       - name: Push Docker image
         run: |
           docker tag $IMAGE_NAME:$IMAGE_TAG $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG
